--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@
         <div class="col-md-8"></div>
         <div class="col-md-4 bottom-row-item">
         	<p><i><small>A collaboration between:</small></i></p>
-            <a href="http://www.soc.ku.dk/english/" target="_blank" class="bottom-row-brand "><img src="/css/images/logo_ku.jpg" class="ku-brand"></a>
-			<a href="http://medialab.sciences-po.fr" target="_blank" class="bottom-row-brand "><img src="/css/images/logo_medialab.png" class="medialab-brand"></a>
+            <a href="http://www.soc.ku.dk/english/" target="_blank" class="bottom-row-brand "><img src="css/images/logo_ku.jpg" class="ku-brand"></a>
+			<a href="http://medialab.sciences-po.fr" target="_blank" class="bottom-row-brand "><img src="css/images/logo_medialab.png" class="medialab-brand"></a>
         </div>       
 	</div>
 </div>
