Preparing first deployment

--- a/basic_sigma.html
+++ b/basic_sigma.html
@@ -17,7 +17,7 @@ $(document).ready(function() {
   	});
   	
 	//Parse data
-    sigma.parsers.gexf( 'data/elitepersons.gexf', 
+    sigma.parsers.gexf( 'data/person-person.gexf', 
     function(graph) { 
     	  s.graph.read(graph);
           s.refresh();
