--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/fakeLoader.css">
     <link type="text/css" rel="stylesheet" href="css/template.css">
     <link type="text/css" rel="stylesheet" href="css/chosen.min.css">
 	<link type="text/css" rel="stylesheet" href="css/jquery-ui.min.css">
@@ -17,6 +18,7 @@
    
     <!-- For various purposes -->
     <script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
+    <script type="text/javascript" src="js/fakeLoader.min.js"></script>
     <script type="text/javascript" src="js/jquery-ui.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script async type="text/javascript" src="js/underscore-1.7.0.min.js"></script>
@@ -193,5 +195,7 @@
         </div>       
 	</div>
 </div>
+<div id="ajaxloader"></div>
+<div id="dim"></div>
 </body>
 </html>
