--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
 	    			 $( '.ui-dialog-titlebar-close')[0].style.display = 'inline';			    
     			    window.ini = data[window.graph];
     				$("#graph_changer").text(ini.graph_header);
-    				changeLogo(globalsettings.logo, globalsettings.url);
+    				if(globalsettings.logo != "" & globalsettings.url != ""){
+	    				changeLogo(globalsettings.logo, globalsettings.url);
+	    			}
     				drawGraph();
     			}
     			else{
@@ -161,6 +163,9 @@
     					</div>
     					<div role="tabpanel" class="tab-pane" id="color">
     						<div id="color_by_container" ><span class="glyphicon glyphicon-erase"></span></div>
+    						<div id="highlight_by_container" class="contain">
+	    					    <div class="filter_header"><span class="glyphicon glyphicon-pushpin"></span> Highlight:</div>
+    					    </div>
     					</div>
     					<div role="tabpanel" class="tab-pane" id="layout">
     						<div id="merge_by_container"><span class="glyphicon glyphicon-qrcode"></div>
@@ -170,9 +175,6 @@
     						<div id="filter_by_container" class="filter_container">
     							<div class="filter_header"><span class="glyphicon glyphicon-filter"></span> Filter:</div>
     						</div>
-    					    <div id="highlight_by_container" class="filter_container contain">
-	    					    <div class="filter_header"><span class="glyphicon glyphicon-pushpin"></span> Highlight:</div>
-    					    </div>
     					</div>
   					</div>
 				</div>
