Extended edges rendering

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 	<script async type="text/javascript" src="js/sigma.canvas.renders.js"></script>
 	<script async type="text/javascript" src="js/sigma.layout.forceAtlas2.min.js"></script>
 	<script async type="text/javascript" src="js/sigma.exporters.svg.js"></script>	
+   	<script async type="text/javascript" src="js/edgeLabelPlugin/settings.js"></script>		
+   	<script async type="text/javascript" src="js/edgeLabelPlugin/sigma.canvas.edges.labels.def.js"></script>
+   
+   
    
     <!-- For various purposes -->
     <script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
