--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   	//////////////
     //Load data
     $(document).ready(function() {
-    	window.graph = getUrlParameter("graph");
+    	window.graph = getUrlParameter("graph1");
     	$('#status').button('loading'); //Set loading sign
     	//Graph changer
     	$( "#dialog" ).dialog({
