--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
 
     <!-- Global state -->
     <script type="text/javascript">
-    /*(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
 	ga('create', 'UA-60418603-1', 'auto');
-  	ga('send', 'pageview');*/
+  	ga('send', 'pageview');
   	
   	//////////////
     //Load data
@@ -182,7 +182,7 @@
         <div class="col-md-2">
 	        <p style="margin-left: 10px;"><i><small>Powered by:</i></small></p>
 	        <div id="annalogo" class="indent"></div>
-	        <p style="margin-left: 20px;"><small><a href="https://github.com/bornakke/ANna/" target="_blank">ANna v0.5</a></small></p>
+	        <p style="margin-left: 20px;"><small><a href="https://github.com/bornakke/ANna/" target="_blank">ANna v0.6</a></small></p>
         </div>
         <div class="col-md-6"></div>
         <div id="logos" class="col-md-4 bottom-row-item">
