--- a/basic_sigma.html
+++ b/basic_sigma.html
@@ -18,7 +18,7 @@ $(document).ready(function() {
   	});
   	
 	//Parse data
-    sigma.parsers.gexf( 'data/eliteGrey_noedges.gexf', 
+    sigma.parsers.gexf( 'data/elite_lessattributes.gexf', 
     function(graph) { 
     	  s.graph.read(graph);
           s.refresh();
