--- a/basic_sigma.html
+++ b/basic_sigma.html
@@ -2,7 +2,7 @@
 <head>
 <script src="js/sigma.min.js"></script>
 <script src="js/sigma.parsers.gexf.min.js"></script>
-<script type="text/javascript" src="js/sigma.exporters.svg.js"></script>	
+<!--<script type="text/javascript" src="js/sigma.exporters.svg.js"></script>	-->
 <script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
 <script>
 $(document).ready(function() {
@@ -18,7 +18,7 @@ $(document).ready(function() {
   	});
   	
 	//Parse data
-    sigma.parsers.gexf( 'data/elite_lessattributes.gexf', 
+    sigma.parsers.gexf( 'data/theelite_noevent.gexf', 
     function(graph) { 
     	  s.graph.read(graph);
           s.refresh();
