--- a/basic_sigma.html
+++ b/basic_sigma.html
@@ -5,6 +5,7 @@
 <script type="text/javascript" src="js/sigma.min.js"></script>
 <script type="text/javascript" src="js/sigma.parsers.gexf.min.js"></script>
 <script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
+<script type="text/javascript" src="sigma.classes.camera.js"></script>
 <script>
 
 $(document).ready(function() {
