--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@
   				<!--<p>Please chose basic graph to navigate:</p>   -->
   				<div id="graphs"></div>
   			</div>
-  			<div id="savetoCanvasModal" title="Right click and press 'Save image as...'">
+  			<!--<div id="savetoCanvasModal" title="Right click and press 'Save image as...'">-->
+  			<div id="savetoCanvasModal" title="Højre klik og tryk 'Save image as...'">
   			</div>
       	</div>
 	  	
